# scpi-rs

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.txt  README.md  RELEASE.md  codecov.yml  dependabot.yml  package-lock.json  release.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  fuzzing.yml  quickstart.yml  release.yml
example/: Cargo.toml  README.md
example-cortexm/: Cargo.toml  README.md  blackmagic.gdb  memory.x
example-cortexm/.cargo/: config
example-cortexm/src/: main.rs
example/src/: bench.rs  common.rs  main.rs
scpi/: Cargo.toml  README.tpl
scpi-contrib/: Cargo.toml
scpi-contrib/examples/: minimal_scpi.rs
scpi-contrib/examples/digital_meter/: main.rs  tree.rs
scpi-contrib/examples/digital_meter/device/: measure.rs  mod.rs  sense.rs  trigger.rs  util.rs
scpi-contrib/examples/digital_meter/tests/: conftest.py  test_basic.py
scpi-contrib/examples/voltmeter/: main.rs  tree.rs
scpi-contrib/examples/voltmeter/device/: mod.rs  trigger.rs
scpi-contrib/src/: lib.rs
scpi-contrib/src/classes/: mod.rs
scpi-contrib/src/classes/digital_meter/: mod.rs
scpi-contrib/src/classes/signal_switcher/: mod.rs
scpi-contrib/src/ieee488/: common.rs  mod.rs  trg.rs
scpi-contrib/src/scpi1999/: mod.rs  numeric.rs
scpi-contrib/src/scpi1999/measurement/: mod.rs
scpi-contrib/src/scpi1999/sense/: common.rs  current.rs  function.rs  mod.rs  resistance.rs  voltage.rs
scpi-contrib/src/scpi1999/status/: mod.rs  operation.rs  questionable.rs
scpi-contrib/src/scpi1999/system/: capability.rs  error.rs  lfrequency.rs  mod.rs
scpi-contrib/src/scpi1999/trigger/: abort.rs  initiate.rs  mod.rs
scpi-contrib/src/scpi1999/unit/: mod.rs
scpi-contrib/tests/: test_args.rs  test_commands.rs  test_csv.rs
scpi-contrib/tests/csv/: numeric.csv
scpi-contrib/tests/util/: mod.rs
scpi-derive/: Cargo.toml
scpi-derive/src/: lib.rs
scpi/examples/: simple.rs  voltmeter.rs
scpi/examples/common/: completion.rs  mod.rs
scpi/examples/voltmeter/: main.rs  tree.rs
scpi/fuzz/: Cargo.toml
scpi/fuzz/fuzz_targets/: channel_list.rs  command.rs  fuzz_common.rs  fuzz_target_1.rs  fuzz_target_numeric_list.rs  fuzz_target_parser.rs  fuzz_util.rs  numeric_list.rs
scpi/src/: command.rs  error.rs  expression.rs  ieee488.rs  lib.rs  option.rs  response.rs  scpi.rs  suffix.rs  tokenizer.rs  tree.rs  util.rs
scpi/src/error/: arrayqueue.rs  mod.rs  vecdeque.rs
scpi/src/expression/: channel_list.rs  instrument_specifier.rs  mod.rs  numeric_expression.rs  numeric_list.rs
scpi/src/ieee488/: commands.rs  common.rs  mandatory.rs  mod.rs  trg.rs
scpi/src/parameters/: mod.rs  numeric.rs
scpi/src/parser/: mod.rs  parameters.rs  suffix.rs
scpi/src/parser/expression/: channel_list.rs  mod.rs  numeric_list.rs
scpi/src/parser/response/: arrayformatter.rs  mod.rs  vecformatter.rs
scpi/src/parser/tokenizer/: mod.rs  tests.rs  token.rs  util.rs
scpi/src/response/: arrayformatter.rs  mod.rs  vecformatter.rs
scpi/src/scpi1999/: commands.rs  mandatory.rs  mod.rs  numeric.rs  status.rs  system.rs  unit.rs
scpi/src/scpi1999/input/: mod.rs
scpi/src/scpi1999/measurement/: mod.rs
scpi/src/scpi1999/sense/: common.rs  current.rs  function.rs  mod.rs  resistance.rs  voltage.rs
scpi/src/scpi1999/status/: mod.rs
scpi/src/scpi1999/system/: capability.rs  error.rs  lfrequency.rs  mod.rs
scpi/src/scpi1999/trigger/: abort.rs  initiate.rs  mod.rs
scpi/src/scpi1999/unit/: mod.rs
scpi/src/tokenizer/: mod.rs  tests.rs  token.rs  tryfrom.rs
scpi/src/tree/: command.rs  mod.rs
scpi/tests/: channel_list.rs  numeric.rs  numeric_list.rs  test_args.rs  test_commands.rs  test_csv.rs  test_tokenizer.rs  test_tree_traversal.rs  test_util.rs  tree_traversal.rs
scpi/tests/csv/: channel_list.csv  numeric.csv  numeric_list.csv  test.csv  tree_traversal.csv
scpi/tests/util/: mod.rs
scpi_derive/: Cargo.toml  README.md
scpi_derive/src/: lib.rs
scpi_instrument/: Cargo.toml
scpi_instrument/src/: lib.rs
scpi_instrument/src/subsystem/: calculate.rs  calibrate.rs  control.rs  diagnostic.rs  display.rs  format.rs  hcopy.rs  input.rs  instrument.rs  measure.rs  memory.rs  mmemory.rs  mod.rs  output.rs  program.rs  route.rs  sense.rs  source.rs  status.rs  system.rs  test.rs  trace.rs  trigger.rs  unit.rs  vxi.rs
scpi_utils/: README.md
vxi-server/: Cargo.toml  README.md  test_linux.sh
vxi-server/examples/: server.rs  utils.rs
vxi-server/src/: device.rs  lib.rs
vxi-server/src/hislip/: client.rs  errors.rs  messages.rs  mod.rs
vxi-server/src/vxi11/: mod.rs  portmapper.rs  rpc.rs  vxiservice.rs  xdr.rs
