[package]
name = "scpi_example"
version = "0.3.5"
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scpi = {path = "../scpi", version = "0.3.5"}
git-version = "0.3.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
path = "src/bench.rs"

[features]
default = []
no_std = ["scpi/libm"]
extended-error = ["scpi/extended-error"]
arbitrary-utf8-string = ["scpi/arbitrary-utf8-string"]
