[package]
name = "scpi_example"
version = "0.5.0"
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scpi = {path = "../scpi", version = "0.5.0"}
git-version = "0.3.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
path = "src/bench.rs"

[features]
default = []
std = ["scpi/std"]
extended-error = ["scpi/extended-error"]
