[package]
name = "scpi_derive"
version = "1.0.0"
description = "SCPI/IEEE488.2 parser support library"

# Inherit from workspace workspace
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
document-features = "0.2"

[lib]
proc-macro = true

[features]
## Used to enable macros used internally by scpi-rs
_private = []
