[package]
name = "scpi"
version = "0.5.0"
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2021"
license = "MIT"

description = "SCPI/IEEE488.2 parser library"
keywords = ["SCPI", "parser", "Instrumentation", "Embedded", "Multimeter"]
categories = ["command-line-interface", "embedded", "parsing", "no-std"]

homepage = "https://github.com/Atmelfan/scpi-rs"
documentation = "https://docs.rs/crate/scpi"
repository = "https://github.com/Atmelfan/scpi-rs"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
scpi_derive = { path = "../scpi_derive", version= "0.5.0"}
lexical-core = { version="0.8.3", features=["parse-floats", "parse-integers", "write-floats", "write-integers", "power-of-two"], default-features=false }
arrayvec = { version = "0.7", default-features = false }

[dependencies.uom]
version = "0.32.0"
default-features = false
optional = true
features = [
    "autoconvert",
    "usize", "u8", "u16", "u32", "u64",
    "isize", "i8", "i16", "i32", "i64",
    "f32", "f64",
    "si",
    "try-from"
]

[features]
default = ["std", "extended-error"]

# Use std
std = ["alloc", "lexical-core/std"]

alloc = []

compact = ["lexical-core/compact"]

# Support extender errors (example -100,"Command error;extended")
extended-error = []

###################################### UNITS ######################################
# Individual units
unit-length = ["uom"]
unit-velocity = ["uom"]
unit-acceleration = ["uom"]
unit-electric-potential = ["uom"]
unit-electric-current = ["uom"]
unit-electric-conductance = ["uom"]
unit-electric-resistance = ["uom"]
unit-electric-charge = ["uom"]
unit-electric-capacitance = ["uom"]
unit-electric-inductance = ["uom"]
unit-energy = ["uom"]
unit-power = ["uom"]
unit-angle = ["uom"]
unit-amount-of-substance = ["uom"]
unit-magnetic-flux = ["uom"]
unit-magnetic-flux-density = ["uom"]
unit-ratio = ["uom"]
unit-temperature = ["uom"]
unit-time = ["uom"]
unit-pressure = ["uom"]
unit-volume = ["uom"]
unit-frequency = ["uom"]

all-units = [
    # Units
    "unit-length",
    "unit-velocity",
    "unit-acceleration",
    "unit-electric-potential",
    "unit-electric-current",
    "unit-electric-conductance",
    "unit-electric-resistance",
    "unit-electric-charge",
    "unit-electric-capacitance",
    "unit-electric-inductance",
    "unit-energy",
    "unit-power",
    "unit-angle",
    "unit-amount-of-substance",
    "unit-magnetic-flux",
    "unit-magnetic-flux-density",
    "unit-ratio",
    "unit-temperature",
    "unit-time",
    "unit-pressure",
    "unit-volume"
]




