[package]
name = "scpi"
version = "0.99.0"
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "SCPI/IEEE488.2 parser library"
keywords = ["SCPI", "parser", "Instrumentation", "Embedded", "Multimeter"]
categories = ["command-line-interface", "embedded", "parsing", "no-std"]

homepage = "https://github.com/Atmelfan/scpi-rs"
documentation = "https://docs.rs/crate/scpi"
repository = "https://github.com/Atmelfan/scpi-rs"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
document-features = "0.2"
arrayvec = { version = "0.7", default-features = false }

[dependencies.scpi_derive]
path = "../scpi_derive"
version = "0.99"
features = ["_private"]

[dependencies.lexical-core]
version = "0.8"
default-features = false
features = [
    "parse-floats",
    "parse-integers",
    "write-floats",
    "write-integers",
    "power-of-two",
]

[dependencies.uom]
version = "0.33.0"
default-features = false
optional = true
features = ["autoconvert", "f32", "f64", "si", "try-from"]

[dev-dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rustyline = "10.0"

[features]
default = [
    "alloc",
    # Units
    "unit-electric-potential",
    "unit-electric-current",
    "unit-electrical-conductance",
    "unit-electrical-resistance",
    "unit-electric-charge",
    "unit-electric-capacitance",
    "unit-electric-inductance",
    "unit-energy",
    "unit-power",
    "unit-angle",
    "unit-ratio",
    "unit-thermodynamic-temperature",
    "unit-time",
    "unit-frequency",
]

#! Common features
## Use alloc
alloc = []

## Use std
std = ["lexical-core/std", "alloc"]

## Enable compact feature in lexical-core
compact = ["lexical-core/compact"]

#! ## Units of measurements
#! Use [uom](https://crates.io/crates/uom) 
## Electric potential (Voltage)
unit-electric-potential = ["uom"]
## Electric current
unit-electric-current = ["uom"]
## Electric conductance (inverse resistance)
unit-electrical-conductance = ["uom"]
## Electric resistance
unit-electrical-resistance = ["uom"]
## Electric charge
unit-electric-charge = ["uom"]
## Electric capacitance
unit-electric-capacitance = ["uom"]
## Electric inductance
unit-electric-inductance = ["uom"]
## Energy
unit-energy = ["uom"]
## Power
unit-power = ["uom"]
## Angle
unit-angle = ["uom"]
## Ratio / percentage / unitless
unit-ratio = ["uom"]
## Temperature
unit-thermodynamic-temperature = ["uom"]
## Time
unit-time = ["uom"]
## Frequency
unit-frequency = ["uom"]
