[package]
name = "scpi"
version = "1.0.0"
description = "SCPI/IEEE488.2 parser library"

# Inherit from workspace workspace
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
document-features = { workspace = true }
arrayvec = { version = "0.7", default-features = false, optional = true }

[dependencies.scpi_derive]
path = "../scpi-derive"
version = "1.0"
features = ["_private"]

[dependencies.lexical-core]
version = "0.8"
default-features = false
features = [
    "parse-floats",
    "parse-integers",
    "write-floats",
    "write-integers",
    "power-of-two",
]

[dependencies.uom]
version = "0.36.0"
default-features = false
optional = true
features = ["autoconvert", "f32", "f64", "si", "try-from"]

[dev-dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[features]
default = [
    "alloc",
    # Units
    "unit-electric-potential",
    "unit-electric-current",
    "unit-electrical-conductance",
    "unit-electrical-resistance",
    "unit-electric-charge",
    "unit-capacitance",
    "unit-inductance",
    "unit-energy",
    "unit-power",
    "unit-angle",
    "unit-ratio",
    "unit-thermodynamic-temperature",
    "unit-time",
    "unit-frequency",
]

#! Common features
## Use alloc
alloc = []

## Use arrayvec
arrayvec = ["dep:arrayvec"]

## Use std (overrides alloc)
std = ["lexical-core/std", "alloc"]

## Enable compact feature in lexical-core
compact = ["lexical-core/compact"]

#! ## Units of measurements
#! Use [uom](https://crates.io/crates/uom) for automatic conversion of unit suffixes.
uom = ["dep:uom"]
## Electric potential (Voltage)
unit-electric-potential = ["uom"]
## Electric current
unit-electric-current = ["uom"]
## Electric conductance (inverse resistance)
unit-electrical-conductance = ["uom"]
## Electric resistance
unit-electrical-resistance = ["uom"]
## Electric charge
unit-electric-charge = ["uom"]
## Electric capacitance
unit-capacitance = ["uom"]
## Electric inductance
unit-inductance = ["uom"]
## Energy
unit-energy = ["uom"]
## Power
unit-power = ["uom"]
## Angle
unit-angle = ["uom"]
## Ratio / percentage / unitless
unit-ratio = ["uom"]
## Temperature
unit-thermodynamic-temperature = ["uom"]
## Time
unit-time = ["uom"]
## Frequency
unit-frequency = ["uom"]
