[package]
name = "scpi_derive"
version = "0.99.0"
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "SCPI/IEEE488.2 parser support library"
keywords = []
categories = []

homepage = "https://github.com/Atmelfan/scpi-rs"
documentation = "https://github.com/Atmelfan/scpi-rs"
repository = "https://github.com/Atmelfan/scpi-rs"
readme = "./README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
document-features = "0.2"

[lib]
proc-macro = true

[features]
## Used to enable macros used internally by scpi-rs
_private = []